--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,8 @@
 /* Add CSS Styling */
+
+div ,text {
+    background-color: #ffff00;
+    color: red;
+    font-size: 20px;
+    text-align: center;
+}
