03-flex-header-2 Fri 19 Sep 2025 12:30 PM +10:00 Flex Heading nav bars

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -45,4 +45,19 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+}
+
+.header, ul, [class^="flex"] {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo, .links, .notifications, .profile-image, ul li {
+  margin: 0 8px;
+}
+
+ul li:first-child {
+  margin-left: 0px;
 }
