--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -26,12 +26,12 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / 3;
+  grid-column: 1 / span 2;
 }
 
 .sidebar {
   background-color: #005B94;
-  grid-row: 2 / 4;
+  grid-row: 2 / span 2;
 }
 
 .nav {
@@ -44,7 +44,7 @@ html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1 / span 2;
 }
 
 .article p {
