--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -9,6 +9,9 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(2, 1fr) 4fr 1fr;
 }
 
 .container div {
@@ -18,6 +21,11 @@ html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+  margin-bottom: 15px;
+}
+
+.container div:last-of-type {
+  margin-bottom: 0px;
 }
 
 .header {
@@ -28,6 +36,10 @@ html {
 .sidebar {
   background-color: #005B94;
   grid-row: 2 / 4;
+}
+
+.nav, .article {
+  margin-left: 15px;
 }
 
 .nav {
