--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -12,6 +12,7 @@ html {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: repeat(2, 1fr) 4fr 1fr;
+  gap: 15px;
 }
 
 .container div {
@@ -21,11 +22,6 @@ html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
-  margin-bottom: 15px;
-}
-
-.container div:last-of-type {
-  margin-bottom: 0px;
 }
 
 .header {
@@ -36,10 +32,6 @@ html {
 .sidebar {
   background-color: #005B94;
   grid-row: 2 / 4;
-}
-
-.nav, .article {
-  margin-left: 15px;
 }
 
 .nav {
